[package]
name = "xmind2tc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_excel_writer = "0.2.0"
zip = { version = "0.6.6", features = ["deflate"]}
